--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "serve -s build",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -37,7 +37,6 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.13.1",
-    "serve": "^11.3.0"
+    "node-sass": "^4.13.1"
   }
 }
